package Ejercicio3_Guia12_Extra_entidades;

// Hotel **** Cantidad de Habitaciones, Número de camas, Cantidad de Pisos, Gimnasio,
// Nombre del Restaurante, Capacidad del Restaurante, Precio de las Habitaciones.

public class HotelCuatroEstrellas extends Hotel {
    public HotelCuatroEstrellas(String nombre, String direccion, String localidad, String gerente,
        int cantidadHabitaciones, int numeroCamas, int cantidadPisos, String gimnasioTipo,
        String nombreRestaurante, int capacidadRestaurante) {
        super(nombre, direccion, localidad, gerente, cantidadHabitaciones, numeroCamas, cantidadPisos, gimnasioTipo,
        nombreRestaurante, capacidadRestaurante);
    }

    
}